compiler/test-data/parser/errors/instructions/unclosed_instruction_brace.frel
module test

blueprint Bad {
    box { } .. width { 100
}
